# PythonQt_CTK_Qt5

./: CMakeLists.txt  README.md
examples/ExpressionTesting/: MyPythonQtTestProj.pro  main.cpp
src/: PythonQtConversion.cpp  PythonQtImporter.cpp
